samples/_failures_safe/1760884841_7a2979_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d37199b.c: In function ‘main’:
./samples/SAFE/__tmp_4d37199b.c:134:20: error: expected ‘;’ at end of input
  134 |         buffer_free
      |                    ^
      |                    ;
./samples/SAFE/__tmp_4d37199b.c:134:9: error: expected declaration or statement at end of input
  134 |         buffer_free
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_4d37199b.c:134:9: error: expected declaration or statement at end of input
